--- a/papers/ecoop2013/biblio.bib
+++ b/papers/ecoop2013/biblio.bib
@@ -1,3 +1,121 @@
+@article{ceri2000web,
+ title={Web Modeling Language (WebML): a modeling language for designing Web sites},
+ author={Ceri, S. and Fraternali, P. and Bongio, A.},
+ journal={Computer Networks},
+ volume={33},
+ number={1},
+ pages={137--157},
+ year={2000},
+ publisher={Elsevier}
+}
+
+@inproceedings{van2006hera,
+  title={Hera-S: web design using sesame},
+  author={van der Sluijs, K. and Houben, G.J. and Broekstra, J. and Casteleyn, S.},
+  booktitle={Proceedings of the 6th international conference on Web engineering},
+  pages={337--344},
+  year={2006},
+  organization={ACM}
+}
+@article{valderas2007transformational,
+  title={A transformational approach to produce web application prototypes from a web requirements model},
+  author={Valderas, P. and Pelechano, V. and Pastor, O.},
+  journal={International Journal of Web Engineering and Technology},
+  volume={3},
+  number={1},
+  pages={4--42},
+  year={2007},
+  publisher={Inderscience}
+}
+@article{brambilla2008designing,
+  title={Designing web applications with WebML and WebRatio},
+  author={Brambilla, M. and Comai, S. and Fraternali, P. and Matera, M.},
+  journal={Web Engineering: Modelling and Implementing Web Applications},
+  pages={221--261},
+  year={2008},
+  publisher={Springer}
+}
+@inproceedings{nunes2006rapid,
+  title={Rapid prototyping of web applications combining domain specific languages and model driven design},
+  author={Nunes, D.A. and Schwabe, D.},
+  booktitle={Proceedings of the 6th international conference on Web engineering},
+  pages={153--160},
+  year={2006},
+  organization={ACM}
+}
+
+@article{kraus2007model,
+  title={Model-driven generation of web applications in UWE},
+  author={Kraus, A. and Knapp, A. and Koch, N.},
+  journal={Model-Driven Web Engineering (MDWE 2007), Como, Italy (July 2007)},
+  year={2007},
+  publisher={Citeseer}
+}
+@article{vdovjak2003engineering,
+  title={Engineering semantic web information systems in hera},
+  author={Vdovjak, R. and Frasincar, F. and Houben, G.J. and Barna, P.},
+  journal={Journal of Web Engineering},
+  volume={2},
+  number={1/2},
+  pages={3--26},
+  year={2003},
+  publisher={Citeseer}
+}
+@inproceedings{valverde2007mda,
+  title={A MDA-based environment for web applications development: from conceptual models to code},
+  author={Valverde, F. and Valderas, P. and Fons, J. and Pastor, O.},
+  booktitle={6th International Workshop on Web-Oriented Software Technologies},
+  year={2007}
+}
+@inproceedings{pastor2003oows,
+  title={Oows: A method to develop web applications from web-oriented conceptual models},
+  author={Pastor, O. and Fons, J. and Pelechano, V.},
+  booktitle={International Workshop on Web Oriented Software Technology (IWWOST)},
+  pages={65--70},
+  year={2003}
+}
+@inproceedings{koch2001authoring,
+  title={The authoring process of the uml-based web engineering approach},
+  author={Koch, N. and Kraus, A. and Hennicker, R.},
+  booktitle={First International Workshop on Web-Oriented Software Technology},
+  year={2001}
+}
+
+@inproceedings{schwabe1996systematic,
+  title={Systematic hypermedia application design with OOHDM},
+  author={Schwabe, D. and Rossi, G. and Barbosa, S.D.J.},
+  booktitle={Proceedings of the the seventh ACM conference on Hypertext},
+  pages={116--128},
+  year={1996},
+  organization={ACM}
+}
+@article{lima2003modeling,
+  title={Modeling applications for the Semantic Web},
+  author={Lima, F. and Schwabe, D.},
+  journal={Web Engineering},
+  pages={425--441},
+  year={2003},
+  publisher={Springer}
+}
+
+
+@inproceedings{Groenewegen08_WebDSL,
+  title={WebDSL: A domain-specific language for dynamic Web applications},
+  author={Groenewegen, D.M. and Hemel, Z. and Kats, L.C.L. and Visser, E.},
+  booktitle={Companion to the 23rd ACM SIGPLAN conference on Object-oriented programming systems languages and
+applications},
+  pages={779--780},
+  year={2008},
+  organization={ACM}
+}
+
+@inproceedings{Meijer04_StaticDynamic,
+  title={Static typing where possible, dynamic typing when needed: The end of the cold war between programming languages},
+  author={Meijer, E. and Drayton, P.},
+  year={2004},
+  organization={OOPSLA}
+}
+
 @inproceedings{Moors12_Virtualized,
   title={Scala-virtualized},
   author={Moors, A. and Rompf, T. and Haller, P. and Odersky, M.},
