--- a/papers/ecoop2013/repairing.tex
+++ b/papers/ecoop2013/repairing.tex
@@ -1380,7 +1380,7 @@ Easiness for defining libraries & ** & *** & *** & *** & *** & *** & *** & * \\
 Client-server code sharing & & * & * & * & * & *  & * & *** \\
 \hline
 \end{tabular}
-\caption{Support level of Web programming features by mainstream tools. Zero star means that the feature is not supported
+\caption{Support of Web programming features by mainstream tools. Zero star means that the feature is not supported
 at all, three stars mean a strong support.}
 \label{comparison}
 \end{table}
@@ -1388,7 +1388,7 @@ at all, three stars mean a strong support.}
 Several model-driven methodologies for creating web applications have been proposed, including
 \cite{schwabe1996systematic,lima2003modeling,ceri2000web,koch2001authoring,pastor2003oows,valverde2007mda,vdovjak2003engineering,kraus2007model,nunes2006rapid,brambilla2008designing,valderas2007transformational,van2006hera,Groenewegen08_WebDSL}.
 Many of them follow the standard top-down MDE vision in providing abstractions and code generators, nevertheless
-these cannot be easily customized or generate only application skeletons.
+these cannot be easily customized or they generate only application skeletons.
 
 \section{Conclusion and Perspectives}
 \label{discussion}
