packing and adding some words about Links

--- a/papers/ecoop2013/biblio.bib
+++ b/papers/ecoop2013/biblio.bib
@@ -1,3 +1,32 @@
+@article{Guerraoui99_Distributed,
+ author = {Guerraoui, Rachid and Fayad, Mohamed E.},
+ title = {OO distributed programming is not distributed OO programming},
+ journal = {Commun. ACM},
+ issue_date = {April 1999},
+ volume = {42},
+ number = {4},
+ month = apr,
+ year = {1999},
+ issn = {0001-0782},
+ pages = {101--104},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/299157.299179},
+ doi = {10.1145/299157.299179},
+ acmid = {299179},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
+@inproceedings{Cooper07_Links,
+  title={Links: Web programming without tiers},
+  author={Cooper, E. and Lindley, S. and Wadler, P. and Yallop, J.},
+  booktitle={Formal Methods for Components and Objects},
+  pages={266--296},
+  year={2007},
+  organization={Springer}
+}
+
 @article{ceri2000web,
  title={Web Modeling Language (WebML): a modeling language for designing Web sites},
  author={Ceri, S. and Fraternali, P. and Bongio, A.},
