--- a/papers/gpce2013/biblio.bib
+++ b/papers/gpce2013/biblio.bib
@@ -1,3 +1,23 @@
+@article{Elliott2003_Compiling,
+  title={Compiling embedded languages},
+  author={Elliott, Conal and Finne, Sigbj{\o}rn and De Moor, Oege},
+  journal={Journal of Functional Programming},
+  volume={13},
+  number={3},
+  pages={455--481},
+  year={2003},
+  publisher={Cambridge University Press}
+}
+
+@inproceedings{Hudak98_DSL,
+  title={Modular domain specific languages and tools},
+  author={Hudak, Paul},
+  booktitle={Software Reuse, 1998. Proceedings. Fifth International Conference on},
+  pages={134--142},
+  year={1998},
+  organization={IEEE}
+}
+
 @article{Guerraoui99_Distributed,
  author = {Guerraoui, Rachid and Fayad, Mohamed E.},
  title = {OO distributed programming is not distributed OO programming},
