--- a/papers/gpce2013/gpce2013.tex
+++ b/papers/gpce2013/gpce2013.tex
@@ -29,7 +29,7 @@
 \preprintfooter{short description of paper}   % 'preprint' option specified.
 
 \title{Title Text}
-\subtitle{Subtitle Text, if any}
+\subtitle{You don’t have to trade abstraction for control}
 
 \authorinfo{Julien Richard-Foy\and Olivier Barais\and Jean-Marc Jézéquel}
            {IRISA, Université de Rennes 1}
@@ -51,69 +51,77 @@ keyword1, keyword2
 
 \section{Introduction}
 
-Rich Internet Applications have interesting properties: they require no installation or deployment on
-clients and enables large scale collaborative experiences. However, writing large Web applications is known to be
+Web applications are attractive because they require no installation or deployment on clients and enable large scale
+collaborative experiences. However, writing large Web applications is known to be
 difficult~\cite{Mikkonen08_SpaghettiJs,Preciado05_RIAMethodologyNecessity}. One challenge comes from the fact
 that the business logic is scattered into heterogeneous client-side and server-side
-environments~\cite{Echeverria09_RIA,Kuuskeri09_PartitioningClientServer}. For instance, HTML fragments may be
-built from the server-side when a page is requested by a client, but they may also be built from the client-side to
-perform an incremental update subsequent to a user action. How could developers write HTML fragment definitions once
-and render them on both client-side and server-side? The more interactive the application is, the more logic needs to
-be duplicated between the server-side and the client-side.
+environments~\cite{Echeverria09_RIA,Kuuskeri09_PartitioningClientServer}. This gives less flexibility in the
+engineering process and requires a higher maintainance effort: once you decided to implement a feature on
+client-side, changing your *mind* means completely rewriting the feature on server-side (and \emph{vice versa}).
+Even worse, logic parts that need to run on both client-side and server-side are duplicated. For instance HTML
+fragments may be built from the server-side when a page is requested by a client, but they may also be built from the
+client-side to perform an incremental update subsequent to an user action. How could developers write HTML fragment
+definitions once and render them on both client-side and server-side? The more interactive the application is, the
+more logic needs to be duplicated between the server-side and the client-side (explain why?).
 
-Using the same programming language on both server-side and client-side could reduce the gap between client-side and
-server-side environments, however the JavaScript language -- which is currently the only action language natively
-supported by all Web browsers -- has several drawbacks making it hardly suitable for large code bases (\eg no static
-typing, no module system, verbose syntax, \etc). An increasing number of programming languages support generating
-JavaScript (\eg GWT, SharpKit\footnote{\href{http://sharpkit.net}{http://sharpkit.net}}, Dart,
-Kotlin\footnote{\href{http://kotlin.jetbrains.org/}{http://kotlin.jetbrains.org/}},
+Using the same programming language on both server-side and client-side can improve the software engineering
+process by enabling code reuse between both sides. Incidentally, the JavaScript language -- which is currently the
+only action language natively supported by almost all Web clients -- can be used on server-side, and an increasing
+number of programming languages or compiler backends can generate JavaScript code (\eg
+Java/GWT~\cite{Chaganti07_GWT}, SharpKit\footnote{\href{http://sharpkit.net}{http://sharpkit.net}},
+Dart~\cite{Griffith11_Dart}, Kotlin\footnote{\href{http://kotlin.jetbrains.org/}{http://kotlin.jetbrains.org/}},
 ClojureScript~\cite{McGranaghan11_ClojureScript}, Fay\footnote{\href{http://fay-lang.org/}{http://fay-lang.org/}},
-Haxe~\cite{Cannasse08_HaXe} or Opa\footnote{\href{http://opalang.org/}{http://opalang.org/}}), increasing the panel
-of programming languages available to write both the client-side and the server-side code of a Web application.
+Haxe~\cite{Cannasse08_HaXe} or Opa\footnote{\href{http://opalang.org/}{http://opalang.org/}}).
 
-Having a full featured, cutting edge, programming language that runs on both client-side and server-side can help
-developers to write more maintainable code, however by abstracting over the differences of the client-side and the
-server-side environments, the code may suffer from performance issues. Performance is a primary concern in Web
-applications, because they are supposed to run on a broad range of devices, from the powerful desktop personal
-computer to the less powerful smartphone. “Every 100~ms delay costs 1\% of sales”, said Amazon in 2006.
+However, this engineering comfort may come at the price of an inefficient runtime: abstracting over platform
+differences often means restricting to a subset of common features and losing opportunities to perform platform
+specific optimizations. Performance is a primary concern in Web applications, because they are expected to run on a
+broad range of devices, from the powerful desktop personal computer to the less powerful smartphone. “Every 100~ms
+delay costs 1\% of sales”, said Amazon in 2006. For instance, because the boundaries of the code sent to the client
+are less visible when you share code between client-side and server-side, transitive dependencies may pull a lot of
+code on the client, causing a high download overhead. Moreover, generating efficient code for heterogeneous platforms
+is hard to achieve in an extensible way: the translation of common abstractions like collections into their native
+counterpart (JavaScript arrays on client-side and standard library’s collections on server-side) may be hardcoded in
+the compiler, but that would not scale to handle all the abstractions a complete application may use (\eg HTML
+fragment definitions, form validation rules, or even some business data type that may be represented differently for
+performance reasons).
 
-For instance, the boundaries of the code parts to emit on client-side are less visible when you share code between
-client-side and server-side so transitive dependencies may pull a lot of code, causing a high download overhead.
-Moreover, generating efficient code for heterogeneous platforms is hard to achieve in an extensible way. (TODO Give a
-concrete example for each problem)
-
-On one hand, for engineering reasons, developers want to write Web applications using a single programming language,
-abstracting over the target platforms differences. But on the other hand, for performance reasons, they want to keep
+On one hand, for engineering reasons, developers want to write Web applications using a single language, abstracting
+over the target platforms differences. But on the other hand, for performance reasons, they want to keep
 control on the way their code is compiled to each target platform. How to solve this dilemma?
 
-Lightweight Modular Staging~\cite{Rompf12_LMSThesis} is a framework for defining deeply embedded DSLs in Scala. It
-has been used to define high-performance DSLs for parallel computing~\cite{Brown11_Parallel} and can be used to
-generate JavaScript code~\cite{Kossakowski12_JsDESL}.
+Compiled domain specific embedded languages~\cite{Elliott2003_Compiling} allow the definition of domain specific
+languages (DSLs) as libraries on top of a host language, and to compile them to a target platform. The deep embedding
+gives the opportunity to control the code generation scheme for a given abstraction and target platform.
 
-On top of this previous work, this paper presents several new APIs (?) that can be shared between client-side and
-server-side code and/or that are efficiently translated on each target platform. More precisely, our contributions
-are:
+This paper presents such a DSL allowing developers to write Web applications in a single language which code
+fragments can be shared between client and server sides, and which is efficiently compiled to each side. More
+precisely, we demonstrate the following features:
 
 \begin{itemize}
  \item Type-directed ad-hoc polymorphism on client-side without runtime dynamic dispatch logic;
- \item Use monads without extra container object creation;
+ \item Usage of monads without extra container object creation;
  \item Ability to define DOM fragments using a common language for server-side and client-side, but that generates
-code using standard APIs on both server-side and client-side ;
+code using standard APIs on both server-side and client-side;
  \item An API for searching in the DOM, that exposes a single entry point but that generates code potentially using
-more optimized native APIs
+more optimized native APIs.
 \end{itemize}
 
 The remainder of this paper is organized as follows. The next section introduces existing approaches for defining
 cross-compiling languages. Section \ref{contribution} presents our contribution. Section \ref{validation} evaluates
 our contribution. Section \ref{discussion} concludes.
 
-\section{Related Works}
+\section{Related Work}
 
 \subsection{Fat Languages}
 
 \subsection{Thin Languages}
 
 \subsection{Deeply Embedded Languages}
+
+Lightweight Modular Staging~\cite{Rompf12_LMSThesis} is a framework for defining deeply embedded DSLs in Scala. It
+has been used to define high-performance DSLs for parallel computing~\cite{Brown11_Parallel} and can be used to
+generate JavaScript code~\cite{Kossakowski12_JsDESL}.
 
 \section{High-Level Abstractions Generating Efficient (and Heterogeneous) Code}
 \label{contribution}
@@ -126,7 +134,7 @@ our contribution. Section \ref{discussion} concludes.
 
 \subsection{Selectors}
 
-\section{Implementation}
+\section{Implementation?}
 
 \section{Evaluation}
 \label{validation}
